--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "astro": "^3.5.5",
     "astro-compress": "^2.2.3",
     "astro-robots-txt": "^1.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "radash": "^11.0.0",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
