--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^5.1.0",
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.5.5",
     "astro-compress": "^2.2.3",
