--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@astrojs/netlify": "^5.1.0",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.0.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^3.5.5",
     "astro-compress": "^2.2.3",
     "astro-robots-txt": "^1.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "radash": "^11.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
