--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "essentialist",
+  "name": "marvinldotcom",
   "type": "module",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0"
   }
