--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "2.0.0",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "tinacms dev -c \"astro dev\"",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -22,10 +22,13 @@
     "radash": "^11.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "tinacms": "^1.5.28"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@tinacms/cli": "^1.5.39",
+    "@types/node": "^20.11.19",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0"
   }
