--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/netlify": "^5.1.0",
     "@astrojs/react": "^3.0.10",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/tailwind": "^5.0.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
