--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^5.1.0",
-    "@astrojs/react": "^3.0.10",
-    "@astrojs/rss": "^4.0.7",
-    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/mdx": "^3.1.8",
+    "@astrojs/netlify": "^5.5.4",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/rss": "^4.0.9",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^3.5.5",
+    "astro": "^4.16.6",
     "astro-compress": "^2.2.3",
     "astro-robots-txt": "^1.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
