--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,74 @@
 {
   "packages": {
-    ".": {
-      "release-type": "node"
+	".": {
+	  "release-type": "node",
+	  "changelog-sections": [
+		{
+		  "type": "feat",
+		  "section": "🚀 New Features",
+		  "hidden": false
+		},
+		{
+		  "type": "feature",
+		  "section": "🚀 New Features",
+		  "hidden": false
+		},
+		{
+		  "type": "enhance",
+		  "section": "💅 Enhancements",
+		  "hidden": false
+		},
+		{
+		  "type": "fix",
+		  "section": "🔥 Bug Fixes",
+		  "hidden": false
+		},
+		{
+		  "type": "perf",
+		  "section": "🏃 Performance Improvements",
+		  "hidden": false
+		},
+		{
+		  "type": "revert",
+		  "section": "↩️ Reverts",
+		  "hidden": true
+		},
+		{
+		  "type": "docs",
+		  "section": "📚 Documentation",
+		  "hidden": false
+		},
+		{
+		  "type": "style",
+		  "section": "🎨 Code Style",
+		  "hidden": false
+		},
+		{
+		  "type": "chore",
+		  "section": "⚙️ Chores",
+		  "hidden": false
+		},
+		{
+		  "type": "refactor",
+		  "section": "⌨️ Code Refactoring",
+		  "hidden": false
+		},
+		{
+		  "type": "test",
+		  "section": "🧪 Automated Testing",
+		  "hidden": false
+		},
+		{
+		  "type": "build",
+		  "section": "🛠️ Build System",
+		  "hidden": false
+		},
+		{
+		  "type": "ci",
+		  "section": "📦 CI Improvements",
+		  "hidden": false
+		}
+	  ]
 	}
   }
 }
