--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.14.1",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.6",
-    "@astrojs/db": "^0.14.1",
     "@libsql/client": "^0.10.0",
     "@tanstack/react-query": "^5.55.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "astro": "^4.16.6",
     "astro-compress": "^2.3.1",
     "astro-robots-txt": "^1.0.0",
     "drizzle-orm": "^0.33.0",
     "ky": "^1.7.2",
     "lucide-react": "^0.439.0",
+    "node-mailjet": "^6.0.6",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "radash": "^11.0.0",
     "react": "^18.3.1",
