--- a/package.json
+++ b/package.json
@@ -10,29 +10,38 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/db": "^0.14.1",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/netlify": "^5.5.4",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@libsql/client": "^0.10.0",
+    "@tanstack/react-query": "^5.55.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.16.6",
-    "astro-compress": "^2.2.3",
+    "astro-compress": "^2.3.1",
     "astro-robots-txt": "^1.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "drizzle-orm": "^0.33.0",
+    "ky": "^1.7.2",
+    "lucide-react": "^0.439.0",
+    "node-mailjet": "^6.0.6",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "radash": "^11.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24",
-    "tinacms": "^1.5.28"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "^3.4.11",
+    "tinacms": "^1.6.7"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@tinacms/cli": "^1.5.39",
-    "@types/node": "^20.11.19",
-    "prettier": "^3.2.5",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tinacms/cli": "^1.6.3",
+    "@types/node": "^20.16.5",
+    "drizzle-kit": "^0.24.2",
+    "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.13.0"
   }
 }
